[package]
name = "cherry-red"
version = "0.1.0"
edition = "2021"
description = "Calculates cherry distance metric on binary, level-1, orchard networks."
repository = "https://github.com/KaariL/cherry_dist"
readme = "README.md"
license-file = "LICENSE"
keywords = ["bioinformatics", "phylogenetics"]

[dependencies]
rand = "=0.8.5"
itertools = "0.13.0"

